--- a/LaneAssignments/LaneAssignments.csproj
+++ b/LaneAssignments/LaneAssignments.csproj
@@ -6,6 +6,9 @@
     <ReleaseVersion>1.0.0</ReleaseVersion>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <DebugType></DebugType>
+  </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\LaneAssignments.Functionality\LaneAssignments.Functionality.csproj" />
   </ItemGroup>
