--- a/LaneAssignments.Functionality/LaneAssignments.Functionality.csproj
+++ b/LaneAssignments.Functionality/LaneAssignments.Functionality.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ReleaseVersion>1.0.0</ReleaseVersion>
   </PropertyGroup>
 
